# language-toolbox

./: Dockerfile  README.md
docker/: build-development.sh  build-production.sh  build-sandboxes.sh  run-development.sh
docker/development/: Dockerfile
docker/sandboxes/sandbox-csharp/: Dockerfile
docker/sandboxes/sandbox-cxx/: Dockerfile
docker/sandboxes/sandbox-java/: Dockerfile
docker/sandboxes/sandbox-javascript/: Dockerfile
docker/sandboxes/sandbox-python/: Dockerfile
documentation/: documentation.md  generate.py
documentation/docgen/: DefinitionTable.py  DocumentationGenerator.py  MarkdownDocument.py  ProtoDetails.py  TemporaryDirectory.py  Utility.py  __init__.py
images/: server_architecture.xml
server/core/: package-lock.json  package.json
server/core/source/ts/: DockerSandbox.ts  LanguageModule.ts  LogProvider.ts  ModuleManager.ts  PortAllocator.ts  ServerCore.ts  SubprocessManagerBase.ts  Utility.ts  WinstonLogProvider.ts  main.ts
server/languages/csharp/: .gitignore  language-csharp.csproj  module.json  run-protoc.sh
server/languages/csharp/source/: AstGenerator.cs  CodegenManager.cs  IOCaptureCodegen.cs  LanguageModuleImp.cs  Program.cs  TempDirectory.cs  UnitTestCodegen.cs  Utility.cs
server/languages/csharp/template/: CodegenOutput.csproj.template  Program.cs.template
server/languages/cxx/: CMakeLists.txt  module.json
server/languages/cxx/source/: AstGenerator.cpp  AstGenerator.h  CodegenManager.cpp  CodegenManager.h  IOCaptureCodegen.cpp  IOCaptureCodegen.h  LanguageModuleImp.cpp  LanguageModuleImp.h  TempDirectory.cpp  TempDirectory.h  UnitTestCodegen.cpp  UnitTestCodegen.h  Utility.cpp  Utility.h  main.cpp
server/languages/cxx/template/: CMakeLists.txt  redirect.cpp  redirect.h  template.cpp
server/languages/java/: .gitignore  build.gradle  module.json  settings.gradle
server/languages/java/src/main/java/: Application.java  AstTransformer.java  CodegenManager.java  IOCaptureCodegen.java  LanguageModuleImp.java  ProcessOutput.java  UnitTestCodegen.java  Utility.java
server/languages/java/src/main/resources/CodegenTemplate/: build.gradle  settings.gradle
server/languages/java/src/main/resources/CodegenTemplate/src/main/java/: CodegenOutput.java
server/languages/javascript/: .gitignore  module.json  package-lock.json  package.json  tsconfig.json  tslint.json
server/languages/javascript/source/template/: IOCaptureHarness.js  TestCaseTemplate.js  UnitTestHarness.js
server/languages/javascript/source/ts/: LanguageModuleImp.ts  main.ts
server/languages/python/: build.py  language-python.py  module.json
server/languages/python/module/: .gitignore  AstTransformer.py  LanguageModuleImp.py  Utility.py  __init__.py
server/languages/python/module/data/: IOMatchingHarness.py  TestCaseTemplate.py  UnitTestHarness.py
server/proto/: common.proto  language.proto  server.proto
test/: build.py  requirements.txt  runtests.py
test/harness/: ProgressPrinter.py  TestHarness.py  Utility.py  VerboseOutput.py  __init__.py
test/tests/: ast_generation.json  ast_matching.json  custom_sandboxes.json  io_matching.json  unit_test_basic.json
test/tests/code/: io_stuff.cpp  io_stuff.cs  io_stuff.java  io_stuff.js  io_stuff.py  language_constructs.cpp  passthrough.cpp  passthrough.cs  passthrough.java  passthrough.js  passthrough.py
